# youyou

./: .env.example  .gitignore  CLAUDE.md  README.md  check_db.py  pyproject.toml  test_db_write.py  test_fixes.py  test_item_tracking.py
.claude/hooks/: check-root-files.md
docs/: API.md  CHANGELOG.md  CLIENT_SERVER_GUIDE.md  EXAMPLES.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  TEST_REPORT.md  TROUBLESHOOTING.md  architecture_overview.md  github_search_guide.md  note_agent_guide.md  testing_report.md  tool_architecture.md
scripts/: BUSINESS_LOGIC_ANALYSIS.md  TEST_README.md  TEST_REPORT_TEMPLATE.md  ZEP_SETUP_GUIDE.md  analyze_interactions.py  debug_agent_iterations.py  debug_caldav.py  debug_github_analysis.py  debug_zep_search.py  github_analysis_issues_report.md  github_url_improvements_summary.md  migrate_qdrant_to_4096.py  robustness_improvements.md  run_tests.sh  test_basic.py  test_business_logic.py  test_caldav_auto_discover.py  test_caldav_connection.py  test_calendar_agent.py  test_comprehensive_scenarios.py  test_db_write.py  test_fixes.py  test_github_e2e.py  test_github_e2e_urls.py  test_github_search.py  test_github_url_extraction.py  test_github_vector_fix.py  test_immich_query.py  test_immich_query_detailed.py  test_item_agent_quick.py  test_item_agent_scenarios.py  test_item_tracking.py  test_keyword_router.py  test_note_agent.py  test_note_agent_integration.py  test_note_intent_recognition.py  test_quick_validation.py  test_redirect_mechanism.py  test_session_history.py  test_sqlite_basic.py  (+6 more)
src/: __init__.py  config.py  server.py
src/agents/: __init__.py
src/agents/calendar_agent/: __init__.py  agent.py  caldav_client.py  prompts.py  time_parser.py  tools.py
src/agents/chat_agent/: __init__.py  agent.py  prompts.py
src/agents/item_agent/: agent.py  tools.py
src/agents/note_agent/: __init__.py  agent.py  prompts.py  tools.py
src/agents/supervisor/: __init__.py  agent.py  prompts.py
src/core/: agent_base.py  database.py  interaction_logger.py  keyword_router.py  logger.py  redirect_detector.py  response_types.py  session_history.py  zep_memory.py
src/tools/github/: __init__.py  analyzer.py
src/tools/storage/: __init__.py  note_storage.py  utils.py
src/youyou/: __init__.py  config.py  server.py
src/youyou/agents/chat_agent/: agent.py  prompts.py
src/youyou/agents/item_agent/: __init__.py  (+3 more)
src/youyou/core/: database.py  memory.py  session_history.py  tag_parser.py  zep_memory.py
src/youyou/tools/: __init__.py  item_tools.py
tests/: test_agents.py  test_basic.py  test_complete_flow.py  test_import.py  test_item_agent_tools.py  test_structure.py
(+10 files in other folders)
