[project]
name = "youyou"
version = "0.1.0"
description = "本地智能助手系统 - 支持对话、记忆和任务管理"
readme = "README.md"
authors = [
    { name = "yaotutu", email = "957810668@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-openai>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "flask-restx>=1.3.0",
    "flask-cors>=4.0.0",
    # Zep 记忆系统 (支持 Cloud 和本地部署)
    "zep-cloud>=2.0.0",  # Zep Cloud SDK
    "zep-python>=2.0.0",  # 本地 Zep SDK
    # NoteAgent 依赖
    "qdrant-client>=1.7.0",  # 向量数据库
    "requests>=2.31.0",  # HTTP 请求（GitHub 爬虫）
    "beautifulsoup4>=4.12.0",  # HTML 解析（可选）
]

[project.scripts]
youyou-server = "youyou.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
